# levant

./: pyproject.toml
example/django_levant_example/: manage.py
example/django_levant_example/django_levant_example/: settings.py  urls.py  wsgi.py
example/django_levant_example/furballs/: apps.py  models.py
example/react_levant_example/: package-lock.json  package.json
